--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,5 @@
 .new-expense {
-  background-color: #a892ee;
+  background-color: #35a4f8;
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -13,8 +13,8 @@
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #40005d;
-  background-color: #40005d;
+  border: 1px solid #35a4f8;
+  background-color: #355ff8;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
@@ -22,17 +22,17 @@
 
 .new-expense button:hover,
 .new-expense button:active {
-  background-color: #510674;
-  border-color: #510674;
+  background-color: #355ff8;
+  border-color: #355ff8;
 }
 
 .new-expense button.alternative {
   color: #220131;
-  border-color: transparent;
-  background-color: transparent;
+  border-color: #355ff8;
+  background-color: #355ff8;
 }
 
 .new-expense button.alternative:hover,
 .new-expense button.alternative:active {
-  background-color: #ddb3f8;
+  background-color: #355ff8;
 }
